# gisty

./: .env  .gitignore  Cargo.toml  README.md  Shuttle.toml  test
src/: lib.rs  main.rs  paste_id.rs  tests.rs
src/api/routes/: docs.rs  mod.rs
src/routes/: health.rs
src/views/: home.rs
static/: index.html.tera
