[package]
edition = "2021"
name = "gisty"
version = "0.1.0"

[lib]
create-type = ["cdylib"]

[dependencies]
rand = "0.8"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_derive = "1"
shuttle-service = {version = "0.10.0", features = ["web-rocket"]}
